--- a/assigment_1/pom.xml
+++ b/assigment_1/pom.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <repositories>
+        <repository>
+         <id>my-local-repo</id>
+         <url>file://${basedir}/lib</url>
+        </repository>
+    </repositories>
+    
     <dependencies>
         <dependency>
             <groupId>org.tartarus</groupId>
             <artifactId>snowball</artifactId>
-            <scope>system</scope>
             <version>1.0</version>
-            <systemPath>${basedir}/lib/libstemmer.jar</systemPath>
         </dependency>
     </dependencies>
     
