--- a/assigment_1/pom.xml
+++ b/assigment_1/pom.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <repositories>
+        <repository>
+         <id>my-local-repo</id>
+         <url>file://${basedir}/lib</url>
+        </repository>
+    </repositories>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.tartarus</groupId>
+            <artifactId>snowball</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
+    
+    
+        
+    
+  
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
     <artifactId>assigment_1</artifactId>
@@ -11,4 +31,3 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 </project>
-
